@@ -6072,6 +6072,14 @@ is the construction environment
 (a dictionary of construction values)
 in force for this file installation.
 
+.IP INSTALLSTR
+The string displayed when a file is
+installed into a destination file name.
+The default is:
+.ES
+Install file: "$SOURCE" as "$TARGET"
+.EE
+
 .IP INTEL_C_COMPILER_VERSION
 Set by the "intelc" Tool
 to the major version number of the Intel C compiler
